test/expected/xec_explain_llr.out
explain long long _Fract x
                  ^
19: error: "long long _Fract" is illegal for built-in type
